--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,5 +1,6 @@
 <div id="post-author" class="well constrain-width well-image">
 <img style="float:left; margin:15px" alt="Harish Chakravarthy" src="/pics/harishvc.jpeg"></a>
-<strong>About the author:</strong> Harish Chakravarthy is an intrapreneur leveraging technology to make a positive difference. Available for exciting opportunities. 
-<br/><a href="/about">Detailed Bio</a>
+Harish Chakravarthy is an intrapreneur leveraging technology to make a positive difference. 
+User Experience, Data Visualization and Analytics are areas I am passionate about. 
+Available for exciting opportunities. <a href="/about">Detailed Bio</a>.
 </div>
