--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,6 +1,14 @@
-<div id="post-author" class="well constrain-width well-image">
-<img style="float:left; margin:15px" alt="Harish Chakravarthy" src="/pics/harishvc.jpeg"></a>
-Harish Chakravarthy is an intrapreneur leveraging technology to make a positive difference. 
-User Experience, Data Visualization and Analytics are areas I am passionate about. 
-Available for exciting opportunities. <a href="/about">Detailed Bio</a>.
+<div id="post-author">
+<div class="well constrain-width well-image" style="margin-left:10px;margin-right:10px">
+  <img style="float:left;margin-right:10px" alt="Harish Chakravarthy" src="/pics/harishvc.jpeg" width="100px" height="100px"/>
+  Harish Chakravarthy is an intrapreneur leveraging technology to make a positive difference. 
+  Interests include API integration, user experience, data visualization and analytics. 
+  Available for exciting opportunities. Interested? <a href="/about">Detailed bio</a>. 
+  <br/><br/>
+  <span style="clear:both">Connect with Harish on Social Media</span>
+  <span style="white-space: nowrap"><a href="http://github.com/harishvc/"><i class="fa fa-github"></i> Github</a></span>
+  <span style="white-space: nowrap"><a href="http://twitter.com/harishvc/"><i class="fa fa-twitter"></i> Twitter</a></span>
+  <span style="white-space: nowrap"><a href="http://linkedin.com/in/harishvc/"><i class="fa fa-linkedin"></i> LinkedIn</a></span>
 </div>
+
+
