use smaller pic

--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,6 +1,6 @@
 <div id="post-author">
 <div class="well constrain-width well-image" style="margin-left:10px;margin-right:10px">
-  <img style="float:left;margin-right:10px" alt="Harish Chakravarthy" src="/pics/harishvc.jpeg" width="100px" height="100px"/>
+  <img style="float:left;margin-right:10px" alt="Harish Chakravarthy" src="/pics/harishvc-small.jpeg"/>
   Harish Chakravarthy is an intrapreneur leveraging technology to make a positive difference. 
   Interests include API integration, user experience, data visualization and analytics. 
   Available for exciting opportunities. Interested? <a href="/about">Detailed bio</a>. 
