--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -2,8 +2,7 @@
 <div class="well constrain-width well-image" style="margin-left:10px;margin-right:10px">
   <img style="float:left;margin-right:10px" alt="Harish Chakravarthy" src="/pics/harishvc-small.jpeg"/>
   Harish Chakravarthy is an intrapreneur leveraging technology to make a positive difference. 
-  Interests include API integration, user experience, data visualization and analytics. 
-  Available for exciting opportunities. Interested? <a href="/about">Detailed bio</a>. 
+  Interests include API integration, user experience, data visualization and analytics. <a href="/about">Detailed bio</a>. 
   <br/><br/>
   <span style="clear:both">Connect with Harish on Social Media</span>
   <span style="white-space: nowrap"><a href="http://github.com/harishvc/"><i class="fa fa-github"></i> Github</a></span>
